# TriKit

./: CMakeLists.txt  LICENSE  README.md  README_zh.md
Engine/: CMakeLists.txt
Engine/Core/: Engine.cpp  Engine.h  GameState.h
Examples/: BasicExample.cpp  CMakeLists.txt
Source/: CMakeLists.txt
Source/Core/: Engine.cpp  Engine.h  EngineTypes.h  Event.h
Source/Platform/: Window.cpp  Window.h
Source/Renderer/: Renderer.cpp  Renderer.h
